[tool.poetry]
name = "business-python"
version = "2.1.0"
description = "Date calculations based on business calendars."
authors = ["GoCardless <engineering@gocardless.com>"]
readme = "README.md"
homepage = "https://github.com/gocardless/business-python"
repository = "https://github.com/gocardless/business-python"
packages = [
    { include = "business" },
]
keywords = ["business days", "working days", "calendar", "date"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/gocardless/business-python/issues"
Changelog = "https://github.com/gocardless/business-python/blob/master/CHANGELOG.md"
Security = "https://github.com/gocardless/business-python/blob/master/SECURITY.md"

[tool.poetry.dependencies]
python = "^3.8.1"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"
isort = "^5.12.0"
keyring = "^24.2.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
toml = "^0.10.2"
tox = "^4.6.4"
types-pyyaml = "^6.0.12.11"
types-python-dateutil = "^2.8.19.14"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.11"
types-python-dateutil = "^2.8.19.14"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true

[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310", "py311"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
